# machinestudying

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  cluster.md  pyproject.toml
cheatsheets/: dspy.episode.json  dspy.md  openclaw.episode.json  openclaw.md
data/: README.md  dspy.jsonl  openclaw.jsonl  smalldspy.jsonl
docs/: blog.md  human-audit.md  jacob.md  paper.md  preregistration.md  results.md
experiments/: 001-base-baseline-replication.md  001-smalldspy-nostudy-local-qwen.md  002-cheatsheet-baseline.md  002-smalldspy-nostudy-local10k-qwen.md  003-faithfulness-audit.md  003-smalldspy-cheatsheet.md  004-program-decisions.md  005-self-quizzing-design.md  006-react-faithful-replication.md  007-selfquiz-runs.md  008-repository-and-artifact-audit.md  009-independent-full-tree-audit.md
scripts/: cheatsheet.sbatch  grading.sbatch  nostudying.sbatch  react.sbatch  retry-errors.sbatch  rollout.sbatch  run_args.sh  selfquiz.sbatch  serve_and_wait.sh  serve_vllm.sh  setup.sh  setup_common.sh  setup_grading.sh  study.sbatch
studybench/: artifacts.py  compare.py  dataset.py  env.py  grade.py  human_audit.py  integrity.py  model_cache.py  preregistration.py  provenance.py  react.py  report.py  rollout.py  sandbox.py  selfquiz.py  study.py  tools.py
tests/: test_compare_integrity.py  test_dataset_tools.py  test_env.py  test_grade_report_integrity.py  test_human_audit.py  test_integrity.py  test_model_cache.py  test_preregistration.py  test_provenance.py  test_react_integrity.py  test_rollout_integrity.py  test_sandbox.py  test_scripts.py  test_selfquiz_integrity.py
(+56 files in other folders)
