[project]
name = "studybench-repro"
version = "0.1.0"
description = "Replication of the Machine Studying base baselines (Study-DSPy, Study-OpenClaw)"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.90",
    "regex>=2026.6.28",
    "tree-sitter>=0.23",
    "tree-sitter-typescript>=0.23",
]

[tool.setuptools]
packages = ["studybench"]
